Refactor components and styles for improved responsiveness and consistency
- Updated authorcard.astro to remove unnecessary flex-shrink class.
- Modified container.astro to use a dynamic max-width for breakpoints.
- Adjusted navbar.astro to correct order classes for better layout control.
- Changed postlist.astro to use aspect-square for non-landscape images and updated background classes for hover effects.
- Cleaned up Layout.astro by removing extra whitespace.
- Updated blog post page ([...slug].astro) to use dynamic max-width for breakpoints and adjusted flex-shrink classes.
- Refined index.astro to correct shadow class syntax.
- Enhanced global styles by importing Tailwind CSS configuration.
- Added tailwind.config.cjs for custom theme and aspect ratio settings.

--- a/src/components/authorcard.astro
+++ b/src/components/authorcard.astro
@@ -7,7 +7,7 @@ const { author } = Astro.props;
 <div
   class="px-8 py-8 mt-3 text-zinc-500 rounded-2xl bg-zinc-200 dark:bg-zinc-950 dark:text-zinc-400">
   <div class="flex flex-wrap items-start gap-3 sm:flex-nowrap sm:gap-6">
-    <div class="relative flex-shrink-0 w-24 h-24 mt-1">
+    <div class="relative shrink-0 w-24 h-24 mt-1">
       {
         author.image && (
           <Image
