--- a/src/components/navbar.astro
+++ b/src/components/navbar.astro
@@ -50,7 +50,7 @@ const mobilemenu: Menu[] = [...leftmenu, ...rightmenu];
   <nav aria-label="Main navigation">
     <ul class="flex flex-wrap justify-between md:gap-10 md:flex-nowrap">
       <li
-        class="flex-col items-center justify-start order-1 hidden w-full md:flex md:flex-row md:justify-end md:w-auto md:order-none md:flex-1 gap-10">
+        class="flex-col items-center justify-start order-1 hidden w-full md:flex md:flex-row md:justify-end md:w-auto md:order-0 md:flex-1 gap-10">
         {
           leftmenu.map((item) => (
             <ul>
@@ -118,7 +118,7 @@ const mobilemenu: Menu[] = [...leftmenu, ...rightmenu];
       </li>
 
       <li
-        class="flex-col gap-10 items-center justify-start order-2 hidden w-full md:flex md:flex-row md:w-auto md:flex-1 md:order-none">
+        class="flex-col gap-10 items-center justify-start order-2 hidden w-full md:flex md:flex-row md:w-auto md:flex-1 md:order-0">
         {
           rightmenu.map((item) => (
             <ul>
