--- a/src/components/postlist.astro
+++ b/src/components/postlist.astro
@@ -21,7 +21,7 @@ const category = categories.find(
   <div
     class={cx(
       "relative overflow-hidden transition-all bg-zinc-100 rounded-md dark:bg-zinc-800 hover:scale-105",
-      aspect === "landscape" ? "aspect-4/3" : "aspect-1/1"
+      aspect === "landscape" ? "aspect-4/3" : "aspect-square"
     )}>
     <a href={"/blog/" + post.slug}>
       {
@@ -56,7 +56,7 @@ const category = categories.find(
     class="mt-2 text-lg font-semibold tracking-normal text-brand-primary dark:text-white">
     <a href={"/blog/" + post.slug} title={post.data.title}>
       <span
-        class="bg-gradient-to-r from-blue-200 to-blue-100 dark:from-purple-800 dark:to-purple-900 bg-[length:0px_10px] bg-left-bottom bg-no-repeat transition-[background-size] duration-500 hover:bg-[length:100%_3px] group-hover:bg-[length:100%_10px]">
+        class="bg-linear-to-r from-blue-200 to-blue-100 dark:from-purple-800 dark:to-purple-900 bg-size-[0px_10px] bg-bottom-left bg-no-repeat transition-[background-size] duration-500 hover:bg-size-[100%_3px] group-hover:bg-size-[100%_10px]">
         {post.data.title}
       </span>
     </a>
@@ -77,7 +77,7 @@ const category = categories.find(
   <div
     class="flex items-center mt-3 space-x-3 text-zinc-500 dark:text-zinc-400">
     <div class="flex items-center gap-3">
-      <div class="relative flex-shrink-0 w-5 h-5">
+      <div class="relative shrink-0 w-5 h-5">
         {
           author.image && (
             <Image
