--- a/src/components/themeswitch.astro
+++ b/src/components/themeswitch.astro
@@ -10,7 +10,8 @@ import { ThemeSwitch } from "astro-color-scheme";
       name="themeSwitch"
       id="themeSwitch"
       title="Change theme"
-      class="bg-primary dark:bg-dark">
+      aria-label="Change site theme"
+      class="bg-primary dark:bg-dark px-2 py-1 rounded border border-gray-200 dark:border-zinc-700 appearance-auto focus:outline-none focus:ring-2 focus:ring-offset-2 relative z-10">
       <option value="system">System</option>
       <option value="dark">Dark</option>
       <option value="light">Light</option>
